--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,13 @@ h3{
 }
 a{
     color: #11999E;
+    font-family: 'PT Sans', sans-serif;
 }
+
+a:hover{
+    color: #EAF6F6;
+}
+
 .top-container{
     background-color: #C2DED1;
     position: relative;
@@ -37,9 +43,8 @@ a{
     width: 200px;
 }
 
-+
 .middle-container{
-    margin-top: 10px;
+    margin-top: 100px;
 
 }
 
@@ -59,7 +64,21 @@ a{
     text-align: left;
 }
 
-.skill-row p{
+.intro{
+    width: 30%;
+    margin: auto;
+}
+
+hr{
+    border-style: none;
+    border-top-style: dotted;
+    border-color: #EAF6F6;
+    border-width: 8px;
+    width: 5%;
+    margin: 50px auto;
+}
+
+p{
     line-height: 2;
 }
 
@@ -90,7 +109,7 @@ a{
     -webkit-border-radius: 8;
     -moz-border-radius: 8;
     border-radius: 8px;
-    font-family: Arial;
+    font-family: 'PT Sans', sans-serif;
     color: #ffffff;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
@@ -108,5 +127,23 @@ a{
   }
 
   .bottom-container{
+      background-color: #66BFBF;
       margin-top: 35px;
+      padding: 50px 0 20px;
+  }
+
+  .contact-description{
+      width: 30%;
+      margin: 40px auto 60px;
+  }
+
+  .footer-link{
+      text-decoration: none;
+      margin: 10px 20px; 
+  }
+
+  .copyright{
+      color: #EAF6F6;
+      font-size: 0.75rem;
+      padding: 20px 0;
   }
